example/basic_route/basic_route.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: host-one # prefix route
                      domains:
                        - "a.test.com"
                      routes:
                        - match:
                            prefix: "/anything"
                          route:
                            cluster: httpbin
                    - name: host-two # path route
                      domains:
                        - "b.test.com"
                      routes:
                        - match:
                            path: "/anything"
                          route:
                            cluster: httpbin
                    - name: host-three # regex route
                      domains:
                        - "c.test.com"
                      routes:
                        - match:
                            safe_regex:
                              google_re2: {}
                              regex: "/...abc..."
                          route:
                            prefix_rewrite: "/anything"
                            cluster: httpbin
                    - name: host-four
                      domains:
                        - "d.test.com"
                      routes:
                        - match:
                            prefix: "/direct" # direct response
                          direct_response:
                            status: 233
                            body:
                              inline_string: "abcdefghijk"
                        - match:
                            prefix: "/redirect" # redirect
                          redirect:
                            host_redirect: "baidu.com"
                            path_redirect: "/path_after_redirect"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: httpbin
      connect_timeout: 5s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 20000
